feat: create new design of homepage

--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -13,4 +13,7 @@
   --bg-body: #fff;
   --text-color: #333;
   --text-muted-color: #888;
+  --button-color: #333;
+  --button-color-hover: #fff;
+  --button-color-disabled: #aaa;
 }
