--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -2,6 +2,7 @@
 @import "wrapper";
 @import "text";
 @import "link";
+@import "button";
 @import "general";
 
 * {
@@ -46,6 +47,7 @@ body {
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
+  line-height: 1.5rem;
 }
 
 [type="reset"],
