--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -37,7 +37,7 @@ html {
 body {
   color: var(--text-color);
   background-color: var(--bg-body);
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   word-wrap: break-word;
   font-kerning: normal;
