feat: change responsible of title

--- a/src/styles/scss/_text.scss
+++ b/src/styles/scss/_text.scss
@@ -12,3 +12,9 @@
 .text-center {
   text-align: center;
 }
+
+.text-center-on-mobile {
+  @media screen and (max-width: 600px) {
+    text-align: center;
+  }
+}
